unpackaged/objects/User.object
<CustomObject>
    <fields>
        <fullName>Code_Review_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Code Review Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFMembershipStatus__c</fullName>
        <label>DSProSFMembershipStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFPassword__c</fullName>
        <label>DSProSFPassword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFUsername__c</fullName>
        <description>DocuSign username</description>
        <label>DSProSFUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Allow_Delegated_Sending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EchoSign - Allow Sending As Other Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates that the user&apos;s email address has been validated in EchoSign API.</description>
        <inlineHelpText>This checkbox indicates that the user&apos;s email address has been validated in EchoSign API.</inlineHelpText>
        <label>EchoSign Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rgh__GitHub_Username__c</fullName>
        <label>GitHub Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>DocuSign Active Users</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignInactiveUsers</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DocuSign Inactive Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>